--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           
+<style>
+  google-map {
+    height: 600px;
+  }
+</style>
+<google-map latitude="37.77493" longitude="-122.41942"></google-map>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
